# Solverz

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  __init__.py  algebra.py  conftest.py  eqn.py  main.py  miscellaneous.py  param.py  pyproject.toml  requirements.txt  routine.py  solver.py  solverz_array.py  var.py
.github/workflows/: azure-static-web-apps-kind-mushroom-012ad4400.yml  azure-static-web-apps-yellow-wave-030a64900.yml  ci-cd.yml  claude-code-review.yml  cookbook-practice.yml  debug github action.yml  doc-deploy  doc-deploy.yml  publish-to-pypi.yml  python-package.yml  run-tests.yml  solmuseum.yml  windows_tests.yml
Solverz/: __init__.py  algebra.py  auxiliary.py  eqn.py  equations.py  event.py  miscellaneous.py  param.py  routine.py  solver.py  solverz_array.py  var.py  variables.py
Solverz/algebra/: sas_algebra.py  test_algebra.py
Solverz/auxiliary_service/: address.py  io.py
Solverz/code_printer/: __init__.py  make_module.py  make_pyfunc.py  py_printer.py
Solverz/equation/: eqn.py  equations.py  event.py  hvp.py  jac.py  loop_jac.py  param.py
Solverz/model/: basic.py
Solverz/num/: matrix_calculus.py  num_alg.py  num_interface.py
Solverz/num_api/: custom_function.py  module_parser.py  num_eqn.py  numjac.py  (+1 more)
core/: algebra.py  eqn.py  equations.py  event.py  miscellaneous.py  param.py  routine.py  solver.py  solverz_array.py  var.py  variables.py
docs/: requirements.txt
instances/: 4node3pipe.xlsx  4node3pipe_bench.xlsx  4node3pipe_change_sign.xlsx  4node3pipe_change_sign_bench.xlsx  dae_test.xlsx  dynamic_gas_flow_single_pipe.xlsx  ode_test.xlsx  test_burger.xlsx  test_m3b9.xlsx  test_ode45.xlsx  test_sirk.xlsx
tests/: PHASE0_FINDINGS.md  SOLMUSEUM_FLATTEN_REFACTOR.md  dae_test.xlsx  new_feat_test.py  test_0.py  test_dae.py  test_dhs_qdefc.py  test_dhspf.py  test_dhspf_change_sign.py  test_dyn_gas_flow_single_pipe.py  test_dynamic_gas_flow_single_pipe.py  test_epsflow.py  test_gasflow.py  test_inviscid_burger.py  test_loop_eqn.py  test_m3b9.py  test_matrix_equation.py  test_model_add.py  test_numerical_F_J.py  test_ode.py  test_ode45.py  test_sirk.py
(+157 files in other folders)
