[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Solverz"
version = "0.0.1rc2"
dependencies = [
    "sympy>=1.11.1",
    "numba == 0.58.1",
    "numpy>=1.26.3",
    "scipy>=1.12.0",
    "dill >= 0.3.7",
    "pandas>=1.4.2",
    "openpyxl>=3.0.10",
    "matplotlib>=3.5.2",
    "tqdm>=4.64.1",
    "pytest>=7.2.2",
    "networkx >= 3.1"
]
authors = [
    { name = "Ruizhi Yu", email = "rz.yu@foxmail.com" },
]
description = "A simulation modelling language"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/smallbunnies/Solverz"
Issues = "https://github.com/smallbunnies/Solverz/issues"
