[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "Solverz/_version.py"

[project]
name = "Solverz"
dynamic = ["version"]
dependencies = [
    "sympy>=1.13.0",
    "numba >= 0.58.1",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "dill >= 0.3.7",
    "pandas>=1.4.2",
    "openpyxl>=3.0.10",
    "matplotlib==3.9.0",
    "tqdm>=4.64.1",
    "pytest>=7.2.2",
    "pytest-datadir>=1.5.0",
    "networkx >= 3.1"
]
authors = [
    { name = "Ruizhi Yu", email = "rz.yu@foxmail.com" },
]
description = "A simulation modelling language"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
addopts = "-vv"

[project.urls]
Homepage = "https://github.com/smallbunnies/Solverz"
Issues = "https://github.com/smallbunnies/Solverz/issues"
